kubectl/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oxygencs-deployment
  namespace: grp01eq8-namespace
spec:
  selector:
    matchLabels:
      app: oxygencs
  template:
    metadata:
      labels:
        app: oxygencs
    spec:
      containers:
      - name: oxygencs-container
        image: log680equipe8/oxygencs:latest
        resources:
          requests:
            cpu: "50m"
            memory: "64Mi"
          limits:
            cpu: "100m"
            memory: "128Mi"
