kubectl/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: oxygencs-pod
  namespace: grp01eq8-namespace
spec:
  containers:
  - name: oxygencs-container
    image: log680equipe8/oxygencs:latest
    resources:
      requests:
        memory: "512Mi"
        cpu: "500m"
      limits:
        memory: "512Mi"
        cpu: "500m"
