kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oxygencs-service
  namespace: grp01eq8-namespace
spec:
  type: ClusterIP
  ports:
    - port: 8888
      targetPort: 8888
      protocol: TCP
  selector:
    app: oxygencs  # Sélecteur pour faire correspondre les pods (doit correspondre aux labels du Deployment)
